about page video section overflow fix

--- a/about_page/nila_about_page.css
+++ b/about_page/nila_about_page.css
@@ -34,6 +34,7 @@
   justify-content: center;
   height: 100vh;
   max-width: 100vw;
+  position: relative;
   overflow: hidden;
 }
 
